src/objects/RM2ADIST__c.object
<CustomObject>
    <fields>
        <fullName>DistLocation__c</fullName>
        <formula>RM_Approved_Distributor__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DistLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistName__c</fullName>
        <formula>RM_Approved_Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DistName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistRegion__c</fullName>
        <formula>RM_Approved_Distributor__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DistRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Part_No__c</fullName>
        <label>Dist Part No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMDesc__c</fullName>
        <formula>Raw_Material__r.R_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMDesc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMName__c</fullName>
        <formula>Raw_Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Approved_Distributor__c</fullName>
        <label>RM Approved Distributor</label>
        <referenceTo>RM_Approved_Distributor__c</referenceTo>
        <relationshipLabel>RM to Approved Dist</relationshipLabel>
        <relationshipName>RM_to_Approved_Dist</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipLabel>RM to Approved Dist</relationshipLabel>
        <relationshipName>RM_to_Approved_Dist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RM to Approved Dist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Raw_Material__c</columns>
        <columns>RM_Approved_Distributor__c</columns>
        <columns>DistName__c</columns>
        <columns>DistLocation__c</columns>
        <columns>DistRegion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM2ADIST-{0000000000}</displayFormat>
        <label>RM to Approved Dist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM to Approved Dist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>